web/src/main/java/com/homesnap/webserver/servlet/house/parser/UriParser.java
/* Generated By:JavaCC: Do not edit this line. UriParser.java */
package com.homesnap.webserver.servlet.house.parser;

import com.homesnap.engine.controller.light.Light.LightStateValue;
import com.homesnap.webserver.rest.MissingParameterRestOperation;
import com.homesnap.webserver.rest.MyDomoRestAPI;
import com.homesnap.webserver.rest.RestOperationException;
import com.homesnap.webserver.rest.UnsupportedRestOperation;

import java.io.ByteArrayInputStream;


public class UriParser implements MyDomoRestAPI, UriParserConstants {
/*
CONTROLLER
[/house/labels/labelId/where || /house/groups/groupId/where || /controllers/where]

Light:
/[on|off] || [?what=on||?what=off]

Automation:
/[up|down|stop] || [?what=up||?what=down||?what=stop]

heating:
/[heating_on||heating_off||...status]/dimension?value || [?what=heating_on||heating_off|| ...] => seule la premiere permet de régler les dimensions!

HOUSE SERVLER

/house																			GET/DELETE
/house/labels																	GET/DELETE
/house/labels/labelId || /house/labels/label?id=id								GET/PUT/POST/DELETE
/house/labels/labelId/where || /house/labels/labelId/controller?id=id			GET/PUT/POST/DELETE
/house/groups																	GET
/house/groups/groupId || /house/groups/group?id=id								GET
/house/groups/groupId/where || /house/groups/groupId/controller?id=id			GET


GET
/house
/house/labels
/house/labels/labelId || /house/labels/label?id=id
/house/labels/labelId/where || /house/labels/labelId/controller?id=id

/house/groups
/house/groups/groupId
/house/groups/groupId/where

POST
/house/labels/labelId (title=Titre)
/house/labels/labelId/where (who=1)


PUT
/house/labels/labelId?title=Titre
/house/labels/labelId/where?who=1

DELETE
/house
/house/labels
/house/labels/labelId || /house/labels/label?id=id
/house/labels/labelId/where || /house/labels/labelId/controller?id=id
*/

        private MyDomoRestAPI listener;

        public static void parse(String uri, MyDomoRestAPI listener) throws ParseException, UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation
        {
                UriParser parser = new UriParser(new ByteArrayInputStream(uri.getBytes()));
                parser.listener = listener;
                parser.parseOneLine();
        }

        @Override
        public void onHouse() throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onHouse();
        }

        @Override
        public void onLabelList() throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onLabelList();
        }

        @Override
        public void onLabel(String labelId) throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onLabel(labelId);
        }

        @Override
        public void onControllerByLabel(String labelId, String where) throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onControllerByLabel(labelId, where);
        }

        @Override
        public void onGroupList() throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onGroupList();
        }

        @Override
        public void onGroup(String groupId) throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onGroup(groupId);
        }

        @Override
        public void onControllerByGroup(String groupId, String where) throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onControllerByGroup(groupId, where);
        }

        @Override
        public void onController(String where) throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onController(where);
        }

        @Override
        public void onLightStatus(String where, LightStateValue status) throws UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
                listener.onLightStatus(where, status);
        }

  final private void parseOneLine() throws ParseException, UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
        Token labelId;
        Token groupId;
        Token where;
    if (jj_2_29(2)) {
      jj_consume_token(18);
      jj_consume_token(HOUSE);
      if (jj_2_27(2)) {
        if (jj_2_24(2)) {
          jj_consume_token(18);
          jj_consume_token(LABELS);
          if (jj_2_7(2)) {
            jj_consume_token(18);
            jj_consume_token(LABEL);
            jj_consume_token(19);
            labelId = jj_consume_token(ID);
                                                                 onLabel(labelId.toString());
          } else if (jj_2_8(2)) {
            jj_consume_token(18);
            labelId = jj_consume_token(ID);
            if (jj_2_4(2)) {
              jj_consume_token(18);
              where = jj_consume_token(ID);
              if (jj_2_1(2)) {
                automation();
                                                                              {if (true) return;}
              } else if (jj_2_2(2)) {
                light(where.toString());
                                                                                         {if (true) return;}
              } else if (jj_2_3(2)) {
                jj_consume_token(0);
                                                                       onControllerByLabel(labelId.toString(), where.toString());
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            } else if (jj_2_5(2)) {
              jj_consume_token(18);
              jj_consume_token(CONTROLLER);
              jj_consume_token(19);
              where = jj_consume_token(ID);
                                                                                    onControllerByLabel(labelId.toString(), where.toString());
            } else if (jj_2_6(2)) {
              jj_consume_token(0);
                                                       onLabel(labelId.toString());
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          } else if (jj_2_9(2)) {
            jj_consume_token(0);
                                 onLabelList();
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else if (jj_2_25(2)) {
          jj_consume_token(18);
          jj_consume_token(GROUPS);
          if (jj_2_16(2)) {
            jj_consume_token(18);
            jj_consume_token(GROUP);
            jj_consume_token(19);
            groupId = jj_consume_token(ID);
                                                                 onGroup(groupId.toString());
          } else if (jj_2_17(2)) {
            jj_consume_token(18);
            groupId = jj_consume_token(ID);
            if (jj_2_13(2)) {
              jj_consume_token(18);
              where = jj_consume_token(ID);
              if (jj_2_10(2)) {
                light(where.toString());
                                                                                         {if (true) return;}
              } else if (jj_2_11(2)) {
                automation();
                                                                              {if (true) return;}
              } else if (jj_2_12(2)) {
                jj_consume_token(0);
                                                                      onControllerByGroup(groupId.toString(), where.toString());
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            } else if (jj_2_14(2)) {
              jj_consume_token(18);
              jj_consume_token(CONTROLLER);
              jj_consume_token(19);
              where = jj_consume_token(ID);
                                                                                    onControllerByGroup(groupId.toString(), where.toString());
            } else if (jj_2_15(2)) {
              jj_consume_token(0);
                                                       onGroup(groupId.toString());
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          } else if (jj_2_18(2)) {
            jj_consume_token(0);
                                       onGroupList();
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else if (jj_2_26(2)) {
          jj_consume_token(18);
          jj_consume_token(CONTROLLERS);
          if (jj_2_22(2)) {
            jj_consume_token(18);
            where = jj_consume_token(ID);
            if (jj_2_19(2)) {
              light(where.toString());
                                                                         {if (true) return;}
            } else if (jj_2_20(2)) {
              automation();
                                                              {if (true) return;}
            } else if (jj_2_21(2)) {
              jj_consume_token(0);
                                                       onController(where.toString());
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          } else if (jj_2_23(2)) {
            jj_consume_token(18);
            jj_consume_token(CONTROLLER);
            jj_consume_token(19);
            where = jj_consume_token(ID);
                                                                    onController(where.toString());
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_28(2)) {
        jj_consume_token(0);
                         onHouse();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_30(2)) {
      jj_consume_token(0);
                 {if (true) return;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void light(String where) throws ParseException, UnsupportedRestOperation, RestOperationException, MissingParameterRestOperation {
    if (jj_2_33(2)) {
      jj_consume_token(18);
      if (jj_2_31(2)) {
        jj_consume_token(ON);
        jj_consume_token(0);
                                    onLightStatus(where, LightStateValue.LIGHT_ON);
      } else if (jj_2_32(2)) {
        jj_consume_token(OFF);
        jj_consume_token(0);
                                     onLightStatus(where, LightStateValue.LIGHT_OFF);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_34(2)) {
      jj_consume_token(20);
                      onLightStatus(where, LightStateValue.LIGHT_ON);
    } else if (jj_2_35(2)) {
      jj_consume_token(21);
                       onLightStatus(where, LightStateValue.LIGHT_OFF);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void automation() throws ParseException {
    jj_consume_token(18);
    if (jj_2_36(2)) {
      jj_consume_token(UP);
      jj_consume_token(0);
                           System.out.println("volet UP");
    } else if (jj_2_37(2)) {
      jj_consume_token(DOWN);
      jj_consume_token(0);
                             System.out.println("volet DOWN");
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_3_24() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(LABELS)) return true;
    return false;
  }

  private boolean jj_3_27() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) return true;
    }
    }
    return false;
  }

  private boolean jj_3_29() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(HOUSE)) return true;
    return false;
  }

  private boolean jj_3_12() {
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_11() {
    if (jj_3R_1()) return true;
    return false;
  }

  private boolean jj_3_10() {
    if (jj_3R_2()) return true;
    return false;
  }

  private boolean jj_3_21() {
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_20() {
    if (jj_3R_1()) return true;
    return false;
  }

  private boolean jj_3_19() {
    if (jj_3R_2()) return true;
    return false;
  }

  private boolean jj_3_37() {
    if (jj_scan_token(DOWN)) return true;
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_36() {
    if (jj_scan_token(UP)) return true;
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_15() {
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_32() {
    if (jj_scan_token(OFF)) return true;
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_14() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(CONTROLLER)) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_3R_2()) return true;
    return false;
  }

  private boolean jj_3_31() {
    if (jj_scan_token(ON)) return true;
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_1()) return true;
    return false;
  }

  private boolean jj_3R_1() {
    if (jj_scan_token(18)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_36()) {
    jj_scanpos = xsp;
    if (jj_3_37()) return true;
    }
    return false;
  }

  private boolean jj_3_13() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3_23() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(CONTROLLER)) return true;
    return false;
  }

  private boolean jj_3_22() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3_35() {
    if (jj_scan_token(21)) return true;
    return false;
  }

  private boolean jj_3_34() {
    if (jj_scan_token(20)) return true;
    return false;
  }

  private boolean jj_3_6() {
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(CONTROLLER)) return true;
    return false;
  }

  private boolean jj_3_18() {
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_28() {
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3R_2() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) {
    jj_scanpos = xsp;
    if (jj_3_35()) return true;
    }
    }
    return false;
  }

  private boolean jj_3_33() {
    if (jj_scan_token(18)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_31()) {
    jj_scanpos = xsp;
    if (jj_3_32()) return true;
    }
    return false;
  }

  private boolean jj_3_4() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3_17() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3_30() {
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_16() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(GROUP)) return true;
    return false;
  }

  private boolean jj_3_26() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(CONTROLLERS)) return true;
    return false;
  }

  private boolean jj_3_9() {
    if (jj_scan_token(0)) return true;
    return false;
  }

  private boolean jj_3_8() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3_7() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(LABEL)) return true;
    return false;
  }

  private boolean jj_3_25() {
    if (jj_scan_token(18)) return true;
    if (jj_scan_token(GROUPS)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public UriParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[37];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public UriParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public UriParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new UriParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public UriParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new UriParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public UriParser(UriParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
